# Engineer_Vision

./: .gitignore  CMakeLists.txt  README.md  stone.cpp  stone.h  stone_detect.cpp
GxCamera/: GxCamera.cpp
Serial/: Serial.cpp  Serial.h
